# strand

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  flake.nix
.beads/: last-touched
.claude/: settings.local.json
.claude/hooks/: check-warnings.sh
.claude/skills/release/: SKILL.md
.specs/redesign-shortcut-keys/: 1-context.md  3-requirements.md  4-design.md  5-implementation-plan-1.md
scripts/: release.sh  setup-sandbox.sh
src/: action.rs  app.rs  bd.rs  config.rs  editor.rs  enrich.rs  filter.rs  implement.rs  main.rs  overlay.rs  selector.rs  split.rs  ui.rs
src/action/: ai.rs  clipboard.rs  editor.rs  impl_ops.rs  mod.rs  navigate.rs  state.rs
src/ai/: job.rs  mod.rs
src/ai/enrich/: handler.rs  manager.rs  mod.rs  prompt.rs  run.rs
src/ai/implement/: handler.rs  manager.rs  merge.rs  mod.rs  run.rs  worktree.rs
src/ai/split/: handler.rs  manager.rs  mod.rs  prompt.rs  run.rs
src/ai_implement/: manager.rs  merge.rs  mod.rs  run.rs  worktree.rs
src/child_detail/: keys.rs  ui.rs
src/clipboard/: mod.rs
src/core/: filter.rs  issue_store.rs  mod.rs  overlay.rs  view.rs
src/editor/: mod.rs
src/enrich/: run.rs
src/epic_detail/: ui.rs
src/implement/: mod.rs  run.rs  worktree.rs
src/issue_detail/: ui.rs
src/page/: mod.rs  selector_keys.rs
src/page/epic_detail/: keys.rs  ui.rs
src/page/issue_detail/: keys.rs  ui.rs
src/page/issue_list/: keys.rs  mod.rs  ui.rs
src/page_child_detail/: ui.rs
src/page_epic_detail/: keys.rs  ui.rs
src/page_issue_detail/: keys.rs  ui.rs
src/page_issue_list/: keys.rs  ui.rs
src/split/: manager.rs  mod.rs  prompt.rs  run.rs
src/widget/: horizontal_selector.rs  keybar.rs  mod.rs
