[package]
name = "strand"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
unicode-segmentation = ">=1.10, <1.13"
