[package]
name = "strand-tui"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
description = "AI-powered TUI frontend for beads — throw issues in, AI writes the code"
license = "MIT"
repository = "https://github.com/mrsekut/strand"
keywords = ["tui", "ai", "issue-tracking", "beads", "claude"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "strand"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
unicode-segmentation = ">=1.10, <1.13"
tui-markdown = "0.3.7"
ansi-to-tui = "8.0.1"
libc = "0.2"
toml = "0.8"
dirs = "6"
